<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/persistent_notification_root"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingStart="4dp"
    android:paddingTop="4dp"
    android:paddingEnd="4dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/persistent_shortcut_clean"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/junk_removal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_persistent_clean" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/persistent_shortcut_file"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/home_tab_file_manager"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_persistent_file" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/persistent_shortcut_tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/home_tab_toolbox"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_persistent_tools" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/persistent_shortcut_battery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/battery_info"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_persistent_battery" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
