<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_lock_pin_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <LinearLayout
        android:id="@+id/app_info_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_lock"
            android:textColor="#333333"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_pin_to_use"
        android:textColor="#1D2959"
        android:textSize="16sp" />

    <Space
        android:layout_width="1dp"
        android:layout_height="42dp" />

    <LinearLayout
        android:id="@+id/pin_dot_row"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:id="@+id/circle1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/pin_dot_unselected" />

        <View
            android:id="@+id/circle2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/pin_dot_unselected" />

        <View
            android:id="@+id/circle3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/pin_dot_unselected" />

        <View
            android:id="@+id/circle4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/pin_dot_unselected" />
    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/tv_error_hint"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:gravity="center"
        android:text="@string/pin_no_match"
        android:textColor="#EC521A"
        android:textSize="14sp"
        android:visibility="invisible" />

    <Space
        android:layout_width="1dp"
        android:layout_height="24dp" />

    <LinearLayout
        android:id="@+id/pin_keypad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_1"
                style="@style/AppLockPinKey"
                android:text="1" />

            <TextView
                android:id="@+id/btn_2"
                style="@style/AppLockPinKey"
                android:layout_marginStart="44dp"
                android:text="2" />

            <TextView
                android:id="@+id/btn_3"
                style="@style/AppLockPinKey"
                android:layout_marginStart="44dp"
                android:text="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_4"
                style="@style/AppLockPinKey"
                android:text="4" />

            <TextView
                android:id="@+id/btn_5"
                style="@style/AppLockPinKey"
                android:layout_marginStart="44dp"
                android:text="5" />

            <TextView
                android:id="@+id/btn_6"
                style="@style/AppLockPinKey"
                android:layout_marginStart="44dp"
                android:text="6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_7"
                style="@style/AppLockPinKey"
                android:text="7" />

            <TextView
                android:id="@+id/btn_8"
                style="@style/AppLockPinKey"
                android:layout_marginStart="44dp"
                android:text="8" />

            <TextView
                android:id="@+id/btn_9"
                style="@style/AppLockPinKey"
                android:layout_marginStart="44dp"
                android:text="9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Space
                android:layout_width="66dp"
                android:layout_height="66dp" />

            <TextView
                android:id="@+id/btn_0"
                style="@style/AppLockPinKey"
                android:layout_marginStart="44dp"
                android:text="0" />

            <TextView
                android:id="@+id/btn_delete"
                style="@style/AppLockPinKey"
                android:layout_marginStart="44dp"
                android:text="&#215;" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:text="@string/cancel"
        android:textColor="#666666"
        android:textSize="14sp" />
</LinearLayout>
